# $Id$

AUTOMAKE_OPTIONS = foreign

includedir = $(prefix)/include/dionaea

noinst_HEADERS = dionaea.h
noinst_HEADERS += dns.h
noinst_HEADERS += refcount.h
noinst_HEADERS += node_info.h
noinst_HEADERS += util.h
noinst_HEADERS += log.h
noinst_HEADERS += protocol.h
noinst_HEADERS += modules.h
noinst_HEADERS += connection.h
noinst_HEADERS += pchild.h
noinst_HEADERS += signals.h
noinst_HEADERS += incident.h


