add_subdirectory(python)

if(WITH_MODULE_CURL)
  if(CURL_FOUND)
    add_subdirectory(curl)
  else()
    message(FATAL_ERROR "You have selected the curl module, but curl could not be found")
  endif()
endif()

if(WITH_MODULE_EMU)
  if(LIBEMU_FOUND)
    add_subdirectory(emu)
  else()
    message(FATAL_ERROR "You have selected the emu module, but libemu could not be found")
  endif()
endif()

#if(WITH_MODULE_NC)
#  add_subdirectory(nc)
#endif()

if(WITH_MODULE_NFQ)
  if(NFQUEUE_FOUND)
    add_subdirectory(nfq)
  else()
    message(FATAL_ERROR "You have selected the nfq module, but netfilter queue could not be found")
  endif()
endif()

if(WITH_MODULE_NL)
  if(LIBNL3_FOUND AND LIBNL3_ROUTE_FOUND)
    add_subdirectory(nl)
  else()
    message(FATAL_ERROR "You have selected the nl module, but libnl3 or libnl-route3 could not be found")
  endif()
endif()

if(WITH_MODULE_PCAP)
  if(PCAP_FOUND)
    add_subdirectory(pcap)
  else()
    message(FATAL_ERROR "You have selected the pcap module, but pcap could not be found")
  endif()
endif()

#if(WITH_MODULE_XMATCH)
#  add_subdirectory(XMATH)
#endif()
